fix threads link alignment

--- a/components/threading/global_threads_link/global_threads_link.scss
+++ b/components/threading/global_threads_link/global_threads_link.scss
@@ -5,7 +5,8 @@
     .SidebarLink {
         .icon {
             padding: 3px;
-            margin-right: 5px;
+            margin-right: 12px;
+            margin-left: 1px;
             svg {
                 fill: rgba(var(--sidebar-text-rgb), 0.6);
                 vertical-align: middle;
